[gd_scene load_steps=13 format=3 uid="uid://djupy8p8eemqq"]

[ext_resource type="PackedScene" uid="uid://chcmtwtia1s41" path="res://scenes/levels/base_level.tscn" id="1_uly6k"]
[ext_resource type="FontFile" uid="uid://c5usytkhau5qg" path="res://assets/misc/Lilliput Steps.otf" id="2_42doi"]
[ext_resource type="Script" path="res://scripts/levelScripts/level_11.gd" id="2_nwken"]
[ext_resource type="StyleBox" uid="uid://pl7u85rxhfye" path="res://resources/new_style_box_flat_normal.tres" id="3_etoyk"]
[ext_resource type="StyleBox" uid="uid://dirr82n77phow" path="res://resources/new_style_box_flat_hover.tres" id="4_hh766"]
[ext_resource type="StyleBox" uid="uid://cg54yh1dsa1xo" path="res://resources/new_style_box_flat_pressed.tres" id="5_by3xx"]
[ext_resource type="StyleBox" uid="uid://b5mq8sf7g0a5r" path="res://resources/new_style_box_empty.tres" id="6_axcuu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5whsd"]
bg_color = Color(0.0235294, 0.27451, 0, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.0755101, 0.0755101, 0.0755101, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e3hde"]
bg_color = Color(1, 0, 0, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.0755101, 0.0755101, 0.0755101, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1tbmd"]
bg_color = Color(0.61451, 1.90116e-06, 4.33177e-07, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.0755101, 0.0755101, 0.0755101, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_saj6c"]
bg_color = Color(0.397482, 5.53504e-07, 1.68458e-07, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.0755101, 0.0755101, 0.0755101, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jyjvs"]

[node name="Level_11" instance=ExtResource("1_uly6k")]
script = ExtResource("2_nwken")

[node name="Label" type="Label" parent="." index="0"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -646.0
offset_top = 30.0
offset_right = 646.0
offset_bottom = 197.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_42doi")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_5whsd")
text = "11) Clique no bot√£o verde 30 vezes"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button1" type="Button" parent="." index="1"]
layout_mode = 0
offset_left = 452.0
offset_top = 372.0
offset_right = 552.0
offset_bottom = 472.0
theme_override_fonts/font = ExtResource("2_42doi")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("3_etoyk")
theme_override_styles/hover = ExtResource("4_hh766")
theme_override_styles/pressed = ExtResource("5_by3xx")
theme_override_styles/focus = ExtResource("6_axcuu")

[node name="Button2" type="Button" parent="." index="2"]
layout_mode = 0
offset_left = 835.0
offset_top = 372.0
offset_right = 935.0
offset_bottom = 472.0
theme_override_fonts/font = ExtResource("2_42doi")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_e3hde")
theme_override_styles/hover = SubResource("StyleBoxFlat_1tbmd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_saj6c")
theme_override_styles/focus = SubResource("StyleBoxEmpty_jyjvs")

[connection signal="pressed" from="Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
